--- a/.github/workflows/clasroom.yml
+++ b/.github/workflows/clasroom.yml
@@ -21,167 +21,172 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+
     - name: Exercise 1 - Create Shopping List
       id: exercise-1
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 1 - Create Shopping List
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise1_type test_lab2.py::TestLab2::test_exercise1_length test_lab2.py::TestLab2::test_exercise1_content_type test_lab2.py::TestLab2::test_exercise1_not_empty -v
+        command: python -m pytest test_lab2.py::test_exercise1_type test_lab2.py::test_exercise1_length test_lab2.py::test_exercise1_content_type test_lab2.py::test_exercise1_not_empty -v
         timeout: 10
         max-score: 4
-        
+
     - name: Exercise 2 - Access List Elements
       id: exercise-2
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 2 - Access List Elements
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise2_basic test_lab2.py::TestLab2::test_exercise2_different_list test_lab2.py::TestLab2::test_exercise2_strings -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise2_basic test_lab2.TestLab2.test_exercise2_different_list test_lab2.TestLab2.test_exercise2_strings
         timeout: 10
         max-score: 4
-        
+
     - name: Exercise 3 - List Length and Membership
       id: exercise-3
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 3 - List Length and Membership
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise3_found test_lab2.py::TestLab2::test_exercise3_not_found test_lab2.py::TestLab2::test_exercise3_empty_list test_lab2.py::TestLab2::test_exercise3_numbers -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise3_found test_lab2.TestLab2.test_exercise3_not_found test_lab2.TestLab2.test_exercise3_empty_list test_lab2.TestLab2.test_exercise3_numbers
         timeout: 10
         max-score: 5
-        
+
     - name: Exercise 4 - Append Items
       id: exercise-4
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 4 - Append Items
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise4_basic test_lab2.py::TestLab2::test_exercise4_numbers test_lab2.py::TestLab2::test_exercise4_empty_list test_lab2.py::TestLab2::test_exercise4_order -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise4_basic test_lab2.TestLab2.test_exercise4_numbers test_lab2.TestLab2.test_exercise4_empty_list test_lab2.TestLab2.test_exercise4_order
         timeout: 10
         max-score: 6
-        
+
     - name: Exercise 5 - Insert at Position
       id: exercise-5
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 5 - Insert at Position
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise5_middle test_lab2.py::TestLab2::test_exercise5_beginning test_lab2.py::TestLab2::test_exercise5_end test_lab2.py::TestLab2::test_exercise5_numbers -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise5_middle test_lab2.TestLab2.test_exercise5_beginning test_lab2.TestLab2.test_exercise5_end test_lab2.TestLab2.test_exercise5_numbers
         timeout: 10
         max-score: 6
-        
+
     - name: Exercise 6 - Collect All Items
       id: exercise-6
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 6 - Collect All Items
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise6_basic test_lab2.py::TestLab2::test_exercise6_single test_lab2.py::TestLab2::test_exercise6_numbers -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise6_basic test_lab2.TestLab2.test_exercise6_single test_lab2.TestLab2.test_exercise6_numbers
         timeout: 10
         max-score: 4
-        
+
     - name: Exercise 7 - Sum All Numbers
       id: exercise-7
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 7 - Sum All Numbers
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise7_basic test_lab2.py::TestLab2::test_exercise7_single test_lab2.py::TestLab2::test_exercise7_negative test_lab2.py::TestLab2::test_exercise7_floats -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise7_basic test_lab2.TestLab2.test_exercise7_single test_lab2.TestLab2.test_exercise7_negative test_lab2.TestLab2.test_exercise7_floats
         timeout: 10
         max-score: 5
-        
+
     - name: Exercise 8 - Count Specific Value
       id: exercise-8
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 8 - Count Specific Value
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise8_basic test_lab2.py::TestLab2::test_exercise8_not_found test_lab2.py::TestLab2::test_exercise8_all_same test_lab2.py::TestLab2::test_exercise8_strings -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise8_basic test_lab2.TestLab2.test_exercise8_not_found test_lab2.TestLab2.test_exercise8_all_same test_lab2.TestLab2.test_exercise8_strings
         timeout: 10
         max-score: 5
-        
+
     - name: Exercise 9 - Filter by Threshold
       id: exercise-9
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 9 - Filter by Threshold
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise9_basic test_lab2.py::TestLab2::test_exercise9_none_pass test_lab2.py::TestLab2::test_exercise9_all_pass test_lab2.py::TestLab2::test_exercise9_exact_threshold -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise9_basic test_lab2.TestLab2.test_exercise9_none_pass test_lab2.TestLab2.test_exercise9_all_pass test_lab2.TestLab2.test_exercise9_exact_threshold
         timeout: 10
         max-score: 6
-        
+
     - name: Exercise 10 - Generate Number List
       id: exercise-10
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 10 - Generate Number List
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise10_basic test_lab2.py::TestLab2::test_exercise10_single test_lab2.py::TestLab2::test_exercise10_large_range test_lab2.py::TestLab2::test_exercise10_negative -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise10_basic test_lab2.TestLab2.test_exercise10_single test_lab2.TestLab2.test_exercise10_large_range test_lab2.TestLab2.test_exercise10_negative
         timeout: 10
         max-score: 5
-        
+
     - name: Exercise 11 - Read Entire File
       id: exercise-11
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 11 - Read Entire File
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise11_shopping test_lab2.py::TestLab2::test_exercise11_is_string test_lab2.py::TestLab2::test_exercise11_not_empty -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise11_shopping test_lab2.TestLab2.test_exercise11_is_string test_lab2.TestLab2.test_exercise11_not_empty
         timeout: 10
         max-score: 4
-        
+
     - name: Exercise 12 - Count Lines
       id: exercise-12
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 12 - Count Lines
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise12_shopping test_lab2.py::TestLab2::test_exercise12_words test_lab2.py::TestLab2::test_exercise12_numbers -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise12_shopping test_lab2.TestLab2.test_exercise12_words test_lab2.TestLab2.test_exercise12_numbers
         timeout: 10
         max-score: 5
-        
+
     - name: Exercise 13 - Parse Numbers from File
       id: exercise-13
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 13 - Parse Numbers from File
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise13_basic test_lab2.py::TestLab2::test_exercise13_first_number test_lab2.py::TestLab2::test_exercise13_all_numbers test_lab2.py::TestLab2::test_exercise13_contains_expected -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise13_basic test_lab2.TestLab2.test_exercise13_first_number test_lab2.TestLab2.test_exercise13_all_numbers test_lab2.TestLab2.test_exercise13_contains_expected
         timeout: 10
         max-score: 5
-        
+
     - name: Exercise 14 - Write List to File
       id: exercise-14
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 14 - Write List to File
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise14_creates_file test_lab2.py::TestLab2::test_exercise14_content test_lab2.py::TestLab2::test_exercise14_returns_success test_lab2.py::TestLab2::test_exercise14_line_count -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise14_creates_file test_lab2.TestLab2.test_exercise14_content test_lab2.TestLab2.test_exercise14_returns_success test_lab2.TestLab2.test_exercise14_line_count
         timeout: 10
         max-score: 6
-        
+
     - name: Exercise 15 - Filter File Numbers
       id: exercise-15
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 15 - Filter File Numbers
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise15_basic test_lab2.py::TestLab2::test_exercise15_high_threshold test_lab2.py::TestLab2::test_exercise15_all_pass test_lab2.py::TestLab2::test_exercise15_none_pass -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise15_basic test_lab2.TestLab2.test_exercise15_high_threshold test_lab2.TestLab2.test_exercise15_all_pass test_lab2.TestLab2.test_exercise15_none_pass
         timeout: 10
         max-score: 5
-        
+
     - name: Exercise 16 - Count Words Starting With Letter
       id: exercise-16
       uses: classroom-resources/autograding-command-grader@v1
       with:
         test-name: Exercise 16 - Count Words Starting With Letter
         setup-command: ''
-        command: python -m pytest test_lab2.py::TestLab2::test_exercise16_letter_a test_lab2.py::TestLab2::test_exercise16_letter_b test_lab2.py::TestLab2::test_exercise16_letter_c test_lab2.py::TestLab2::test_exercise16_uppercase test_lab2.py::TestLab2::test_exercise16_no_match -v
+        command: python -m unittest test_lab2.TestLab2.test_exercise16_letter_a test_lab2.TestLab2.test_exercise16_letter_b test_lab2.TestLab2.test_exercise16_letter_c test_lab2.TestLab2.test_exercise16_uppercase test_lab2.TestLab2.test_exercise16_no_match
         timeout: 10
         max-score: 5
-        
+
     - name: Autograding Reporter
       uses: classroom-resources/autograding-grading-reporter@v1
       env:
